# layl-shell

./: Cargo.toml  LICENSE.md  README.md  build.rs  justfile
docs/: color.md  contents.md  dirio.md  drivemgmt.md  fileio.md  init.md  misc.md  power.md  process.md  reg.md
resources/: resource.rc
src/: cli.rs  cmdchecker.rs  dirio.rs  fileio.rs  freader.rs  lyltools.rs  main.rs  power.rs  processmgmt.rs  reg.rs  shell.rs  utils.rs
src/cli/: mod.rs
src/cmdchecker/: mod.rs
src/color/: mod.rs
src/dirio/: mod.rs
src/fileio/: mod.rs
src/freader/: mod.rs
src/init/: mod.rs
src/layl/: cmdchecker.rs  color.rs  dirio.rs  file_interpret.rs  fileio.rs  init.rs  io.rs  mod.rs  power.rs  processmgmt.rs  reg.rs  shell.rs  utils.rs
src/layl/power/: powerperms.rs  powerproc.rs
src/layl/reg/: createreg.rs  deletereg.rs  writereg.rs
src/lyltools/: mod.rs
src/power/: force.rs  mod.rs  normal.rs  powerperms.rs  procedures.rs
src/reg/: createreg.rs  deletereg.rs  mod.rs  writereg.rs
